<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>51</version>
    </parent>

    <groupId>org.jboss.set</groupId>
    <artifactId>jboss-aphrodite-parent</artifactId>
    <version>1.0.0.Final-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Aphrodite</name>
    <description>An api for retrieving and updating SET issues from multiple issue trackers
    </description>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>

        <!-- Dependency versions, please keep alphabetically -->
        <com.squareup.okhttp.okhttp-urlconnection.version>4.9.2</com.squareup.okhttp.okhttp-urlconnection.version>
        <commons.logging.version>1.1.3</commons.logging.version>
        <commons-httpclient.commons-httpclient>3.1</commons-httpclient.commons-httpclient>
        <javax.json.version>1.0.4</javax.json.version>
        <junit.version>4.13.1</junit.version>
        <org.apache.xmlrpc.xmlrpc-client>3.1.3</org.apache.xmlrpc.xmlrpc-client>
        <org.gitlab4j.gitlab4j-api.version>4.14.30</org.gitlab4j.gitlab4j-api.version>
        <org.mockito.version>5.10.0</org.mockito.version>
        <org.kohsuke.github-api.version>1.330</org.kohsuke.github-api.version>
        <org.wildfly.checkstyle-config.version>1.0.8.Final</org.wildfly.checkstyle-config.version>
        <version.javax.enterprise.cdi-api>1.2</version.javax.enterprise.cdi-api>
        <version.javax.inject>1</version.javax.inject>
        <version.javax.ws.rs>2.1.1</version.javax.ws.rs>
        <version.codehaus.jettison>1.5.5</version.codehaus.jettison>
        <version.org.jboss.weld.se>2.3.3.Final</version.org.jboss.weld.se>
        <io.atlassian.fugue.version>4.7.2</io.atlassian.fugue.version>
        <com.atlassian.jira.version>11.3.2</com.atlassian.jira.version>
        <com.atlassian.jira.client.version> 7.0.1</com.atlassian.jira.client.version>
        <org.slf4j.version>2.0.17</org.slf4j.version>
        <version.joda.time>2.14.0</version.joda.time>
        <version.io.atlassian.fugue>6.1.2</version.io.atlassian.fugue>
        <version.com.atlassian.util>4.1.0</version.com.atlassian.util>
        <version.com.atlassian.http.client>5.0.0</version.com.atlassian.http.client>
        <version.com.google.guava>33.2.1-jre</version.com.google.guava>
    </properties>

    <modules>
        <module>bugzilla</module>
        <module>cdicontainer</module>
        <module>common</module>
        <module>container</module>
        <module>domain</module>
        <module>github</module>
        <module>gitlab</module>
        <module>jira</module>
        <module>simplecontainer</module>
        <module>test</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${org.slf4j.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>${version.javax.ws.rs}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${version.com.google.guava}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jettison</groupId>
                <artifactId>jettison</artifactId>
                <version>${version.codehaus.jettison}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${version.joda.time}</version>
            </dependency>
            <dependency>
                <groupId>io.atlassian.util.concurrent</groupId>
                <artifactId>atlassian-util-concurrent</artifactId>
                <version>${version.com.atlassian.util}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.httpclient</groupId>
                <artifactId>atlassian-httpclient-api</artifactId>
                <version>${version.com.atlassian.http.client}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.jira</groupId>
                <artifactId>jira-rest-java-client-api</artifactId>
                <version>${com.atlassian.jira.client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.jira</groupId>
                <artifactId>jira-rest-java-client-core</artifactId>
                <version>${com.atlassian.jira.client.version}</version>
            </dependency>
            <!-- compiled dependencies -->
            <dependency>
                <groupId>org.gitlab4j</groupId>
                <artifactId>gitlab4j-api</artifactId>
                <version>${org.gitlab4j.gitlab4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${com.squareup.okhttp.okhttp-urlconnection.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kohsuke</groupId>
                <artifactId>github-api</artifactId>
                <version>${org.kohsuke.github-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.xmlrpc</groupId>
                <artifactId>xmlrpc-common</artifactId>
                <version>${org.apache.xmlrpc.xmlrpc-client}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.xmlrpc</groupId>
                <artifactId>xmlrpc-client</artifactId>
                <version>${org.apache.xmlrpc.xmlrpc-client}</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>${commons-httpclient.commons-httpclient}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.json</artifactId>
                <version>${javax.json.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.enterprise</groupId>
                <artifactId>cdi-api</artifactId>
                <version>${version.javax.enterprise.cdi-api}</version>
            </dependency>
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>${version.javax.inject}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.se</groupId>
                <artifactId>weld-se</artifactId>
                <version>${version.org.jboss.weld.se}</version>
            </dependency>

            <!--test managed dependencies-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${org.mockito.version}</version>
            </dependency>
            <!--internal dependencies-->

            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-bugzilla</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-github</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-jira</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-simplecontainer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.set</groupId>
                <artifactId>jboss-aphrodite-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <scm>
        <connection>scm:git:git://github.com/jboss-set/aphrodite.git</connection>
        <developerConnection>scm:git:git@github.com:jboss-set/aphrodite.git</developerConnection>
        <url>https://github.com/jboss-set/aphrodite</url>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>GNU General Lesser Public License (LGPL) version 3.0</name>
            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
            <distribution>repo</distribution>
            <comments>Source's header state LGPL but no version, hence v3 is assumed here.
            </comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>egongzle</id>
            <name>Enrique González Martínez</name>
            <organization>IBM</organization>
            <email>enrique.gonzalez.martiezn1@ibm.com</email>
            <timezone>Spain</timezone>
        </developer>
        <developer>
            <id>remerson</id>
            <name>Ryan Emerson</name>
            <organization>Red Hat</organization>
            <email>remerson@redhat.com</email>
            <timezone>United Kingdom</timezone>
        </developer>
        <developer>
            <id>rpelisse</id>
            <name>Romain Pelisse</name>
            <organization>Red Hat</organization>
            <email>belaran@redhat.com</email>
            <timezone>Germany/Berlin</timezone>
        </developer>
    </developers>

    <build>
        <plugins>
            <!-- we don't deploy in sonatype/jboss-->
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nxrm3-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>nexus-deploy</id>
                        <phase>none</phase> 
                        <goals>
                            <goal>staging-deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>verify-dependencies</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <phase>verify</phase>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                            <outputXML>true</outputXML>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <configuration>
                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${version.checkstyle}</version>
                            <exclusions>
                                <exclusion>
                                    <groupId>com.sun</groupId>
                                    <artifactId>tools</artifactId>
                                </exclusion>
                            </exclusions>
                        </dependency>
                        <dependency>
                            <groupId>org.wildfly.checkstyle</groupId>
                            <artifactId>wildfly-checkstyle-config</artifactId>
                            <version>${org.wildfly.checkstyle-config.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>check-style</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>checkstyle</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>
                            --add-opens=java.base/java.lang=ALL-UNNAMED
                            --add-opens=java.base/java.util=ALL-UNNAMED
                        </argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-test</id>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <distributionManagement>
       <repository>
           <id>github</id>
           <name>GitHub Sustaining Engineering Team Apache Maven Packages</name>
           <url>https://maven.pkg.github.com/jboss-set/aphrodite</url>
       </repository>
    </distributionManagement>

    <repositories>
        <repository>
          <id>github</id>
          <url>https://maven.pkg.github.com/jboss-set/aphrodite</url>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
          <releases>
             <enabled>true</enabled>
          </releases>
        </repository>
         <repository>
           <id>atlassian-public</id>
           <url>https://maven.atlassian.com/maven-external</url>
           <snapshots>
             <enabled>true</enabled>
             <updatePolicy>daily</updatePolicy>
             <checksumPolicy>warn</checksumPolicy>
           </snapshots>
           <releases>
             <enabled>true</enabled>
             <checksumPolicy>warn</checksumPolicy>
           </releases>
         </repository>
    </repositories>

</project>
